--- a/pages/boardgame/dark_souls.html
+++ b/pages/boardgame/dark_souls.html
@@ -71,15 +71,152 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-4 col-xs-12">
-                        <div class="card">
+                        <div class="card" style="height: 30rem;overflow-y: auto;">
                             <div class="card-body">
-                                <select class="form-select" aria-label="Character Select 1" id="characterSelect1">
+                                <select class="form-select mb-3" aria-label="Character Select 1" id="characterSelect1" onchange="handleClassChange(event)">
                                     <option>Select Class</option>
                                 </select>
+                                <h5>Tokens</h5>
+                                <div class="row">
+                                    <div class="col">
+                                        <div class="form-check">
+                                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                            <label class="form-check-label" for="flexCheckDefault">
+                                              Ember Token
+                                            </label>
+                                          </div>
+                                    </div>
+                                    <div class="col">
+                                        <div class="form-check">
+                                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                            <label class="form-check-label" for="flexCheckDefault">
+                                              Estus
+                                            </label>
+                                          </div>
+                                    </div>
+                                    <div class="col">
+                                        <div class="form-check">
+                                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                            <label class="form-check-label" for="flexCheckDefault">
+                                              Heroic Action
+                                            </label>
+                                          </div>
+                                    </div>
+
+                                    <div class="col">
+                                        <div class="form-check">
+                                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                            <label class="form-check-label" for="flexCheckDefault">
+                                              Luck
+                                            </label>
+                                          </div>
+                                    </div>
+                                </div>
                                 <h5 class="mt-3">Equip</h5>
-                                <label for="customRange1" class="form-label">Left Hand</label>
-                                <label for="customRange1" class="form-label">Right Hand</label>
-                                <label for="customRange1" class="form-label">Armor</label>
+                                <div class="row">
+                                    <div class="col-sm-6 col-md-4">
+                                        <label for="customRange1" class="form-label">Left Hand</label>
+                                    </div>
+                                    <div class="col">
+                                        <select class="form-select">
+                                            <option>Weapon</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="row mt-2">
+                                    <div class="col-sm-6 col-md-3">
+                                        <label for="customRange1" class="form-label">Upgrades</label>
+                                    </div>
+                                    <div class="col">
+                                        <select class="form-select">
+                                            <option>Upgrade 1</option>
+                                        </select>
+                                    </div>
+                                    <div class="col">
+                                        <select class="form-select">
+                                            <option>Upgrade 1</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <hr>
+                                <div class="row">
+                                    <div class="col-sm-6 col-md-4">
+                                        <label for="customRange1" class="form-label">Right Hand</label>
+                                    </div>
+                                    <div class="col">
+                                        <select class="form-select">
+                                            <option>Weapon</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="row mt-2">
+                                    <div class="col-sm-6 col-md-3">
+                                        <label for="customRange1" class="form-label">Upgrades</label>
+                                    </div>
+                                    <div class="col">
+                                        <select class="form-select">
+                                            <option>Upgrade 1</option>
+                                        </select>
+                                    </div>
+                                    <div class="col">
+                                        <select class="form-select">
+                                            <option>Upgrade 1</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <hr>
+                                <div class="row">
+                                    <div class="col-sm-6 col-md-4">
+                                        <label for="customRange1" class="form-label">Armor</label>
+                                    </div>
+                                    <div class="col">
+                                        <select class="form-select">
+                                            <option>Armor</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="row mt-2">
+                                    <div class="col-sm-6 col-md-3">
+                                        <label for="customRange1" class="form-label">Upgrades</label>
+                                    </div>
+                                    <div class="col">
+                                        <select class="form-select">
+                                            <option>Upgrade 1</option>
+                                        </select>
+                                    </div>
+                                    <div class="col">
+                                        <select class="form-select">
+                                            <option>Upgrade 1</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <hr>
+                                <div class="row">
+                                    <div class="col-sm-6 col-md-4">
+                                        <label for="customRange1" class="form-label">Belt</label>
+                                    </div>
+                                    <div class="col">
+                                        <select class="form-select">
+                                            <option>Weapon</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="row mt-2">
+                                    <div class="col-sm-6 col-md-3">
+                                        <label for="customRange1" class="form-label">Upgrades</label>
+                                    </div>
+                                    <div class="col">
+                                        <select class="form-select">
+                                            <option>Upgrade 1</option>
+                                        </select>
+                                    </div>
+                                    <div class="col">
+                                        <select class="form-select">
+                                            <option>Upgrade 1</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <hr>
                                 <h5 class="mt-3">Status</h5>
                                 <div class="row mb-3">
                                     <div class="col-sm-3 col-md-4">
@@ -89,11 +226,11 @@
                                         <input type="number" min="1" max="10" class="form-control" id="characterStrength1" disabled readonly>
                                     </div>
                                     <div class="col-sm-3 col-md-5">
-                                        <select class="form-select">
-                                            <option>Base</option>
-                                            <option>Tier 1</option>
-                                            <option>Tier 2</option>
-                                            <option>Tier 3</option>
+                                        <select class="form-select" id="characterStrengthSelect1">
+                                            <option value="0">Base</option>
+                                            <option value="1">Tier 1</option>
+                                            <option value="2">Tier 2</option>
+                                            <option value="3">Tier 3</option>
                                         </select>
                                     </div>
                                 </div>
@@ -102,14 +239,14 @@
                                         <label for="customRange1" class="form-label">Dexterity</label>
                                     </div>
                                     <div class="col-sm-3 col-md-3">
-                                        <input type="number" min="1" max="10" class="form-control" id="characterStrength1" disabled readonly>
+                                        <input type="number" min="1" max="10" class="form-control" id="characterDexterity1" disabled readonly>
                                     </div>
                                     <div class="col-sm-3 col-md-5">
-                                        <select class="form-select">
-                                            <option>Base</option>
-                                            <option>Tier 1</option>
-                                            <option>Tier 2</option>
-                                            <option>Tier 3</option>
+                                        <select class="form-select" id="characterDexteritySelect1">
+                                            <option value="0">Base</option>
+                                            <option value="1">Tier 1</option>
+                                            <option value="2">Tier 2</option>
+                                            <option value="3">Tier 3</option>
                                         </select>
                                     </div>
                                 </div>
@@ -118,14 +255,14 @@
                                         <label for="customRange1" class="form-label">Intelligence</label>
                                     </div>
                                     <div class="col-sm-3 col-md-3">
-                                        <input type="number" min="1" max="10" class="form-control" id="characterStrength1" disabled readonly>
+                                        <input type="number" min="1" max="10" class="form-control" id="characterIntelligence1" disabled readonly>
                                     </div>
                                     <div class="col-sm-3 col-md-5">
-                                        <select class="form-select">
-                                            <option>Base</option>
-                                            <option>Tier 1</option>
-                                            <option>Tier 2</option>
-                                            <option>Tier 3</option>
+                                        <select class="form-select" id="characterIntelligenceSelect1">
+                                            <option value="0">Base</option>
+                                            <option value="1">Tier 1</option>
+                                            <option value="2">Tier 2</option>
+                                            <option value="3">Tier 3</option>
                                         </select>
                                     </div>
                                 </div>
@@ -134,14 +271,14 @@
                                         <label for="customRange1" class="form-label">Faith</label>
                                     </div>
                                     <div class="col-sm-3 col-md-3">
-                                        <input type="number" min="1" max="10" class="form-control" id="characterStrength1" disabled readonly>
+                                        <input type="number" min="1" max="10" class="form-control" id="characterFaith1" disabled readonly>
                                     </div>
                                     <div class="col-sm-3 col-md-5">
-                                        <select class="form-select">
-                                            <option>Base</option>
-                                            <option>Tier 1</option>
-                                            <option>Tier 2</option>
-                                            <option>Tier 3</option>
+                                        <select class="form-select" id="characterFaithSelect1">
+                                            <option value="0">Base</option>
+                                            <option value="1">Tier 1</option>
+                                            <option value="2">Tier 2</option>
+                                            <option value="3">Tier 3</option>
                                         </select>
                                     </div>
                                 </div>
@@ -151,16 +288,31 @@
                 </div>
             </div>
             <hr>
+            <h3>Inventory</h3>
+            <div class="row">
+                <div class="col">
+                    <select class="form-select" aria-label="Campaign Select" id="itemSelect">
+                        <option>Select Item</option>
+                    </select>
+                </div>
+                <div class="col mb-3">
+                    <button type="button" class="btn btn-primary" onclick="addItem()">Add Item</button>
+                </div>
+              </div>
+                <div class="row" id="itemsContainer">
+
+                </div>
+            <hr>
             <h3>Campaign</h3>
             <div class="container">
                 <div class="row">
                     <div class="col">
                         <select class="form-select" aria-label="Campaign Select" id="scenarioSelect">
-                            <option>Campaign Item</option>
+                            <option>Campaign</option>
                         </select>
                     </div>
                     <div class="col mb-3">
-                        <button type="button" class="btn btn-primary" onclick="addScenario()">Add Item</button>
+                        <button type="button" class="btn btn-primary" onclick="addScenario()">Add Scenario</button>
                     </div>
                   </div>
                 <div class="row" id="scenariosContainer">
@@ -179,5 +331,6 @@
         <script src="../../js/dom/componentCreator.js"></script>
         <script src="../../js/boardgame/dark_souls/gameStatus.js"></script>
         <script src="../../js/boardgame/dark_souls/main.js"></script>
+        <script src="../../js/boardgame/dark_souls/itemsHandler.js"></script>
     </body>
 </html>
