--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <nav class="navbar bg-primary" data-bs-theme="dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img src="/images/icons/logo.png" alt="Bootstrap" width="32" height="32" class="d-inline-block align-text-top">
+                    <img src="images/icons/logo.png" alt="Logo" width="32" height="32" class="d-inline-block align-text-top">
                     Board Game Tracker
                 </a>
             </div>
@@ -39,22 +39,22 @@
             <ul class="list-group">
                 <li class="list-group-item">
                     <a href="pages/boardgame/dark_souls.html">
-                        <img width="100" height="100" src="https://m.media-amazon.com/images/I/71eJzGGOlnL.jpg" class="img-thumbail">Dark Souls: The Board Game
+                        <img width="100" height="100" alt="dark souls cover" src="https://m.media-amazon.com/images/I/71eJzGGOlnL.jpg" class="img-thumbail">Dark Souls: The Board Game
                     </a>
                 </li>
                 <li class="list-group-item">
                     <a href="pages/boardgame/mice_and_mystics.html">
-                        <img width="100" height="100" src="https://m.media-amazon.com/images/I/819-WHSONaL.jpg" class="img-thumbail">Mice and Mystics
+                        <img width="100" height="100" alt="mice and mystics cover" src="https://m.media-amazon.com/images/I/819-WHSONaL.jpg" class="img-thumbail">Mice and Mystics
                     </a>
                 </li>
                 <li class="list-group-item">
                     <a href="pages/boardgame/residentevil.html">
-                        <img width="100" height="100" src="https://cf.geekdo-images.com/-cdkttxVSfDG5nfvTyhOqQ__itemrep/img/i7N82QV2jNvaTgmbcwTJo6Hiz6w=/fit-in/246x300/filters:strip_icc()/pic6465101.png" class="img-thumbail">Resident Evil: The Board Game
+                        <img width="100" height="100" alt="resident evil cover" src="https://cf.geekdo-images.com/-cdkttxVSfDG5nfvTyhOqQ__itemrep/img/i7N82QV2jNvaTgmbcwTJo6Hiz6w=/fit-in/246x300/filters:strip_icc()/pic6465101.png" class="img-thumbail">Resident Evil: The Board Game
                     </a>
                 </li>
                 <li class="list-group-item">
                     <a href="pages/boardgame/residentevil3.html">
-                        <img width="100" height="100" src="https://m.media-amazon.com/images/W/MEDIAX_792452-T2/images/I/81FUczD294L.jpg" class="img-thumbail">Resident Evil 3: The Board Game
+                        <img width="100" height="100" alt="resident evil 3 cover" src="https://m.media-amazon.com/images/W/MEDIAX_792452-T2/images/I/81FUczD294L.jpg" class="img-thumbail">Resident Evil 3: The Board Game
                     </a>
                 </li>
             </ul>
