--- a/pages/boardgame/residentevil.html
+++ b/pages/boardgame/residentevil.html
@@ -276,6 +276,21 @@
             <div class="row" id="tensionDeck"></div>
           </div>
           <hr />
+          <h3>Removed Tension Card</h3>
+          <div class="container">
+            <div class="row">
+              <div class="col">
+                <select class="form-select" aria-label="Item Select" id="removedTensionCardSelect">
+                  <option>Select Tension Card</option>
+                </select>
+              </div>
+              <div class="col mb-3">
+                <button type="button" class="btn btn-primary" onclick="addRemovedTensionCardButton()">Add Tension Card</button>
+              </div>
+            </div>
+            <div class="row" id="removedTensionDeck"></div>
+          </div>
+          <hr />
           <h3>Played Narratives</h3>
           <div class="container">
             <p>Add the played narratives that are removed from the game</p>
@@ -290,6 +305,21 @@
               </div>
             </div>
             <div class="row" id="narrativeDeck"></div>
+          </div>
+          <hr />
+          <h3>Added Narratives</h3>
+          <div class="container">
+            <div class="row">
+              <div class="col">
+                <select class="form-select" aria-label="Item Select" id="addedNarrativeCardSelect">
+                  <option>Select Narrative Card</option>
+                </select>
+              </div>
+              <div class="col mb-3">
+                <button type="button" class="btn btn-primary" onclick="addAddedNarrativeCardButton()">Add Narrative Card</button>
+              </div>
+            </div>
+            <div class="row" id="addedNarrativeDeck"></div>
           </div>
           <hr />
           <h3>Played Missions</h3>
@@ -683,6 +713,10 @@
             </g>
           </svg>
         </div>
+      </div>
+      <div class="mb-3">
+        <label for="gameNotes" class="form-label">Notes</label>
+        <textarea class="form-control" id="gameNotes" onchange="handleNotesChanges(event)" rows="3"></textarea>
       </div>
       <div class="container text-center mb-3">
         <button type="button" class="btn btn-primary" onclick="exportGameData()">Export <a id="exportFile"></a>
