--- a/index.html
+++ b/index.html
@@ -15,10 +15,15 @@
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-4H0C61C0KZ"></script>
         <script>
         window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-
-        gtag('config', 'G-4H0C61C0KZ');
+        const host = window.location.hostname;
+        console.log(host)
+        if (host !== 'localhost') {
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+    
+            gtag('config', 'G-4H0C61C0KZ');
+            console.log('setup analytics')
+        }
         </script>
     </head>
     <body>
