--- a/pages/boardgame/mice_and_mystics.html
+++ b/pages/boardgame/mice_and_mystics.html
@@ -17,10 +17,13 @@
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-4H0C61C0KZ"></script>
         <script>
         window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-
-        gtag('config', 'G-4H0C61C0KZ');
+        const host = window.location.hostname;
+        if (host !== 'localhost') {
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+    
+            gtag('config', 'G-4H0C61C0KZ');
+        }
         </script>
     </head>
     <body>
