--- a/pages/boardgame/mice_and_mystics.html
+++ b/pages/boardgame/mice_and_mystics.html
@@ -33,7 +33,6 @@
                     <img src="../../images/icons/logo.png" alt="Bootstrap" width="32" height="32" class="d-inline-block align-text-top">
                     Board Game Campaign Tracker
                 </a>
-                <a href="https://www.buymeacoffee.com/jdrcabral" target="_blank"><img src="https://cdn.buymeacoffee.com/buttons/v2/default-violet.png" alt="Buy Me A Coffee" style="height: 60px !important;width: 217px !important;" ></a>
             </div>
         </nav>
         <div class="container">
@@ -102,6 +101,9 @@
                 <button type="button" class="btn btn-primary" onclick="importData()">Import</button>
                 <button type="button" class="btn btn-danger" onclick="clearAllData()">Clear Data</button>
             </div>
+        </div>
+        <div class="container text-center mb-3">
+          <a href="https://www.buymeacoffee.com/jdrcabral" target="_blank"><img src="https://cdn.buymeacoffee.com/buttons/v2/default-violet.png" alt="Buy Me A Coffee" style="height: 60px !important;width: 217px !important;" ></a>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
         <script src="../../js/modules/baseCampaignStatus.js"></script>
