--- a/pages/boardgame/residentevil3.html
+++ b/pages/boardgame/residentevil3.html
@@ -292,6 +292,10 @@
                     </div>
                 </div>
             </div>
+            <div class="mb-3">
+              <label for="gameNotes" class="form-label">Notes</label>
+              <textarea class="form-control" id="gameNotes" onchange="handleNotesChanges(event)" rows="3"></textarea>
+            </div>
             <div class="container text-center mb-3">
                 <button type="button" class="btn btn-primary" onclick="exportGameData()">Export<a id="exportFile"></a></button>
                 <button type="button" class="btn btn-primary" onclick="importData()">Import</button>
@@ -302,10 +306,9 @@
           <a href="https://www.buymeacoffee.com/jdrcabral" target="_blank"><img src="https://cdn.buymeacoffee.com/buttons/v2/default-violet.png" alt="Buy Me A Coffee" style="height: 60px !important;width: 217px !important;" ></a>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
-        <script src="../../js/lib/baseCampaignStatus.js"></script>
         <script src="../../js/lib/cardBuilder.js"></script>
         <script src="../../js/modules/io.js"></script>
-        <script src="../../js/modules/baseCampaignStatus.js"></script>
+        <script src="../../js/lib/baseCampaignStatus.js"></script>
         <script src="../../js/utils.js"></script>
         <script src="../../js/dom/componentCreator.js"></script>
         <script src="../../js/boardgame/residentevil/core/cardsHandler.js"></script>
