--- a/pages/boardgame/residentevil3.html
+++ b/pages/boardgame/residentevil3.html
@@ -136,9 +136,7 @@
                                         </select>
                                         <label for="customRange1" class="form-label">Health</label>
                                         <input type="number" min="1" max="5" class="form-control" onchange="handleCharacterLifeChange(event)" id="characterHealth2">
-                                        <ul class="nav nav-tabs" id="myTab" role="tablist">
-                                            <li class=""
-                                        </ul>     <h5 class="mt-3">Inventory</h5>
+                                        <h5 class="mt-3">Inventory</h5>
                                         <div class="row">
                                         <div class="col">
                                             <select class="form-select" aria-label="Character 2 Item Select" id="character2ItemSelect">
